--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ typing_extensions==4.12.2
 tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.3
+xlsxwriter==3.1.2
 webdriver-manager==4.0.2
 websocket-client==1.8.0
 Werkzeug==3.0.4
